# brains2

./: .clang-format  .clangd  .gitattributes  .gitignore  AGENTS.md  LICENSE.md  PLAN.md  README.md  car_constants.yaml  cleanup_bags.py  conda-lock-jazzy.yml  conda-lock.yml  env-ci.yml  env.yml  foxglove_template.json  mcap_writer_options.yml  pyrightconfig.json  system_architecture.md  v0.launch.yml  virtual-packages.yml
.github/workflows/: build.yml  update-issue-status.yml
foxglove/call-service-button/: package-lock.json  package.json
foxglove/call-service-button/src/: CallServiceButton.tsx  ExamplePanel.tsx  index.ts
foxglove_extensions/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
foxglove_extensions/src/: CallServiceButton.tsx  JoystickController.tsx  index.ts
launch/: demo.xml  demo.yml  v0.xml  v0.yml
scripts/: build.sh  check_copyright.sh  env_lock.sh  env_lock_sync.sh  env_sync.sh  env_update.sh  lint.sh  purge.sh  test.sh
src/brains2/: CMakeLists.txt  gui.cpp  package.xml
src/brains2/cmake/: ament_cpplint.cmake
src/brains2/include/brains2/common/: cone_color.hpp  marker_color.hpp  math.hpp  spline_fitting.hpp  track.hpp  track_database.hpp  tracks.hpp
src/brains2/include/brains2/control/: controller.hpp  high_level_controller.hpp  low_level_controller.hpp
src/brains2/include/brains2/estimation/: center_line_estimation.hpp
src/brains2/include/brains2/estimation/spline_fitting/: spline_fitter.h
src/brains2/include/brains2/sim/: sim.hpp
src/brains2/msg/: Acceleration.msg  ControllerDebugInfo.msg  Controls.msg  FSM.msg  Map.msg  Pose.msg  TrackEstimate.msg  Velocity.msg
src/brains2/src/common/: cone_color.cpp  marker_color.cpp  math.cpp  spline_fitting.cpp  track.cpp  track_database.cpp  tracks.cpp
src/brains2/src/control/: README.md  control_node.cpp  controller.cpp  debug_fatrop.py  gen.py  high_level_controller.cpp  low_level_controller.cpp  solver_exit_flag.py
src/brains2/src/coordination/: README.md  coordination_node.cpp
src/brains2/src/estimation/: center_line_estimation.cpp  circle_cones.csv  circle_generation.py  circle_spline.csv  fake_track_estimation_node.cpp  interpolated_spline.csv  interpolated_spline_alpha.csv  plot_be.py  spline_plot_circle.py  spline_test.cpp  spline_utils.py  test_cones.csv
src/brains2/src/estimation/spline_fitting/: spline_fitter.cpp  work_spline.cpp
src/brains2/src/sim/: README.md  gen.py  models.c  models.h  sim.cpp  sim_node.cpp
src/brains2/src/slam/: fake_slam_node.cpp
src/brains2/src/tools/: README.md  gui_state.cpp  gui_state.hpp  mpc_tuning_gui.cpp  mpc_wrapper.cpp  mpc_wrapper.hpp  sim_wrapper.cpp  sim_wrapper.hpp
src/brains2/tests/common/: test_track.cpp  test_track_database.cpp  test_tracks.cpp
src/brains2/tests/control/: test_controller.cpp  test_high_level_controller.cpp
src/brains2/tests/estimation/spline_fitting/: test_spline_fitter.cpp  test_spline_fitting.cpp
src/brains2/tests/sim/: test_sim.cpp
track_database/: alpha.csv  alpha_center_line.csv  alpha_center_line.txt  beta.csv  beta_center_line.csv  beta_center_line.txt  gamma.csv  gamma_center_line.csv  gamma_center_line.txt  gen_center_line.py  gen_track.py
tracks/: gen_track.py
